# fast-light-chat

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  ruff.toml
.gemini/: config.yaml  styleguide.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_tone_profile.py  003_datetime_timezone_aware.py
app/: __init__.py  asgi.py  main.py
app/core/: __init__.py  config.py  exceptions.py  security.py
app/db/: __init__.py  mongodb.py  postgres.py  redis.py
app/dependencies/: __init__.py  auth.py
app/domains/: __init__.py
app/domains/agent/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
app/domains/auth/: __init__.py  router.py  schemas.py  service.py
app/domains/chat/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
app/domains/environment/: __init__.py  models.py  router.py  schemas.py  service.py
app/domains/organization/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
app/domains/satisfaction/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
app/domains/tone_profile/: __init__.py  draft_service.py  models.py  repository.py  router.py  schemas.py  service.py
app/domains/user/: __init__.py  models.py  repository.py  (+3 more)
app/middlewares/: __init__.py  security.py
app/sockets/: __init__.py  server.py
frontend/dashboard/: dashboard.css  dashboard.js  index.html
frontend/widget/: index.html  widget.css  widget.js
scripts/: seed_data.py
tests/: __init__.py  conftest.py
(+10 files in other folders)
